--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
             <div class="info-text">
                 <h1>Кирилл Левчук</h1>
-                <p>Привет, меня зовут Кирилл, долгое время я <strong>профессионально занимался кулинарией</strong>. Время идет, и я решил что-то поменять в своей жизни.
-                    <br>Теперь я увлекаюсь <strong>программированием</strong> и мечтаю стать <strong>крутым специалитом</strong>.</p>
-                <p>А еще, я обожаю компьтеры и у меня прекрасное чувство юмора!</p>
+                <p>Привет, меня зовут Кирилл, долгое время я <strong>профессионально занимался кулинарией</strong>. Время идет, и я продолжаю этим заниматься.
+                    <br>Также, я увлекаюсь <strong>программированием</strong> и хочу когда-нибудь, <strong>стать специалитом в этой области</strong>.</p>
+                <p>А еще у меня прекрасное чувство юмора!</p>
 
                 <h2>Социальные сети</h2>
                 <a href="https://vk.com/anathematogod" target="_blank">Вконтакте</a> |
@@ -70,18 +70,18 @@
                 <tbody>
                     <tr>
                         <td>Ресторан Meet Meat</td>
-                        <td>Повар-технолог</td>
-                        <td>2016-2020</td>
+                        <td>Помощник повара/Повар гриля/Повар горячего цеха/Повар холодного цеха</td>
+                        <td>2016-2019</td>
+                    </tr>
+                    <tr>
+                        <td>Ресторан Aldente</td>
+                        <td>Су-шеф</td>
+                        <td>2019-2021</td>
                     </tr>
                     <tr>
                         <td>Ресторан Zuma</td>
-                        <td>Су-шеф</td>
-                        <td>2020-2022</td>
-                    </tr>
-                    <tr>
-                        <td>LLC Farpost</td>
-                        <td>Менеджер по работе с юр. лицами</td>
-                        <td>2022-2022</td>
+                        <td>Повар горячего цеха</td>
+                        <td>2021-2022</td>
                     </tr>
                 </tbody>
             </table>
