--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
 
             <div class="info-text">
                 <h1>Кирилл Левчук</h1>
-                <p>Привет, меня зовут Кирилл, долгое время я <strong>профессионально занимался кулинарией</strong>. Время идет, и я продолжаю этим заниматься.
-                    <br>Также, я увлекаюсь <strong>программированием</strong> и хочу когда-нибудь, <strong>стать специалитом в этой области</strong>.</p>
+                <p>Привет, меня зовут Кирилл, долгое время я <strong>профессионально занимался кулинарией</strong>. Время идет, и я принимаю решение поменять свою жизнь и начать зарабатывать большие деньги. Такую возможность я вижу только в продажах.
+                    <br>Также, я увлекаюсь <strong>психологией</strong> и хочу когда-нибудь, <strong>стать специалитом в этой области</strong>.</p>
                 <p>А еще у меня прекрасное чувство юмора!</p>
 
                 <h2>Социальные сети</h2>
                 <a href="https://vk.com/anathematogod" target="_blank">Вконтакте</a> |
                 <a href="https://t.me/anathematogod" target="_blank">Telegram</a> |
-                <a href="https://github.com/Anathematogod" target="_blank">GitHub</a>
+                <a href="https://github.com/Anathematogod" target="_blank">GitHub</a> |
+                Телефон для связи: +7 (999) 617-76-60
             </div>
 
         </div>
@@ -35,8 +36,6 @@
             <h2>Мои навыки и личные качества</h2>
             <ul class="list2">
                 <li>Владение ПК (продвинутый пользовтель)</li>
-                <li>HTML & CSS (средний уровень)</li>
-                <li>JavaScript (базовый уровень)</li>
                 <br>
                 <li>Высокий уровень коммуникабельности</li>
                 <li>Умею работать на результат</li>
@@ -48,9 +47,8 @@
             <h2>Мои хобби</h2>
             <ul class="list">
                 <li>Прослушивание музыки</li>
-                <li>Экстремальный спорт</li>
-                <li>Программирование</li>
-                <li>Просмотр фильмов</li>
+                <li>Психология</li>
+                <li>Спорт</li>
                 <li>Чтение книг</li>
                 <li>Кулинария</li>
             </ul>
