--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h1>Кирилл Левчук</h1>
                 <p>Привет, меня зовут Кирилл, долгое время я <strong>профессионально занимался кулинарией</strong>. Время идет, и я принимаю решение поменять свою жизнь и начать зарабатывать большие деньги. Такую возможность я вижу только в продажах.
                     <br>Также, я увлекаюсь <strong>психологией</strong> и хочу когда-нибудь, <strong>стать специалитом в этой области</strong>.</p>
-                <p>А еще у меня прекрасное чувство юмора!</p>
+                <p>А ещея очень люблю автомобили и у меня прекрасное чувство юмора!</p>
 
                 <h2>Социальные сети</h2>
                 <a href="https://vk.com/anathematogod" target="_blank">Вконтакте</a> |
@@ -46,7 +46,7 @@
         <div class="card bg-one">
             <h2>Мои хобби</h2>
             <ul class="list">
-                <li>Прослушивание музыки</li>
+                <li>Автомобили</li>
                 <li>Психология</li>
                 <li>Спорт</li>
                 <li>Чтение книг</li>
