--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 
             <div class="info-text">
                 <h1>Кирилл Левчук</h1>
-                <p>Привет, меня зовут Кирилл, долгое время я <strong>профессионально занимался кулинарией</strong>. Время идет, и я принимаю решение поменять свою жизнь и начать зарабатывать большие деньги. Такую возможность я вижу только в продажах.
-                    <br>Также, я увлекаюсь <strong>психологией</strong> и хочу когда-нибудь, <strong>стать специалитом в этой области</strong>.</p>
+                <p>Привет, меня зовут Кирилл, долгое время я <strong>профессионально занимался кулинарией</strong>. Время идет, и я принимаю решение поменять свою жизнь и начать зарабатывать большие деньги. Такую возможность я вижу в продажах.
+                    <br>Также, я увлекаюсь <strong>коуч-психологией</strong> и хочу когда-нибудь, <strong>стать специалитом в этой области</strong>.</p>
                 <p>А ещея очень люблю автомобили и у меня прекрасное чувство юмора!</p>
 
                 <h2>Социальные сети</h2>
                 <a href="https://vk.com/anathematogod" target="_blank">Вконтакте</a> |
                 <a href="https://t.me/anathematogod" target="_blank">Telegram</a> |
-                <a href="https://github.com/Anathematogod" target="_blank">GitHub</a> |
                 Телефон для связи: +7 (999) 617-76-60
             </div>
 
@@ -78,7 +77,7 @@
                     </tr>
                     <tr>
                         <td>Ресторан Zuma</td>
-                        <td>Повар горячего цеха</td>
+                        <td>Су-шеф</td>
                         <td>2021-2022</td>
                     </tr>
                 </tbody>
