--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <li>Спорт</li>
                 <li>Чтение книг</li>
                 <li>Кулинария</li>
+                <li>Программирование (сайт-резюме создал сам)</li>
             </ul>
         </div>
 
