--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="info-text">
                 <h1>Кирилл Левчук</h1>
                 <p>Привет, меня зовут Кирилл, долгое время я <strong>профессионально занимался кулинарией</strong>. Время идет, и я принимаю решение поменять свою жизнь и начать зарабатывать большие деньги. Такую возможность я вижу в продажах.
-                    <br>Также, я увлекаюсь <strong>коуч-психологией</strong> и хочу когда-нибудь, <strong>стать специалитом в этой области</strong>.</p>
-                <p>А ещея очень люблю автомобили и у меня прекрасное чувство юмора!</p>
+                    <br>Также, я увлекаюсь <strong>коуч-психологией</strong> и хочу когда-нибудь <strong>стать специалистом в этой области</strong>.</p>
+                <p>А еще я очень люблю автомобили и у меня прекрасное чувство юмора!</p>
 
                 <h2>Социальные сети</h2>
                 <a href="https://vk.com/anathematogod" target="_blank">Вконтакте</a> |
@@ -34,7 +34,7 @@
         <div class="card bg-skill">
             <h2>Мои навыки и личные качества</h2>
             <ul class="list2">
-                <li>Владение ПК (продвинутый пользовтель)</li>
+                <li>Владение ПК (продвинутый пользователь)</li>
                 <br>
                 <li>Высокий уровень коммуникабельности</li>
                 <li>Умею работать на результат</li>
