--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 
             <div class="info-text">
                 <h1>Кирилл Левчук</h1>
-                <p>Привет, меня зовут Кирилл, долгое время я <strong>профессионально занимался кулинарией</strong>. Время идет, и я принимаю решение поменять свою жизнь и начать зарабатывать большие деньги. Такую возможность я вижу в продажах.
-                    <br>Также, я увлекаюсь <strong>коуч-психологией</strong> и хочу когда-нибудь <strong>стать специалистом в этой области</strong>.</p>
-                <p>А еще я очень люблю автомобили и у меня прекрасное чувство юмора!</p>
+                <p>Привет, меня зовут Кирилл, я кандидат я кандидат на должность <strong>менеджера по проажам</strong>. Я обладаю хорошим чувством юмора и отсутвием страха перед клиентом, даже в те моменты, когда я не знаю ответ на его вопрос. Я не опытный продажник, но мне очень нужно много денег, думаю посыл понятен.)
+                <p>А еще я очень люблю автомобили!</p>
 
                 <h2>Социальные сети</h2>
                 <a href="https://vk.com/anathematogod" target="_blank">Вконтакте</a> |
@@ -45,12 +44,11 @@
         <div class="card bg-one">
             <h2>Мои хобби</h2>
             <ul class="list">
-                <li>Автомобили</li>
-                <li>Психология</li>
+                <li>Коуч-психология</li>
                 <li>Спорт</li>
                 <li>Чтение книг</li>
                 <li>Кулинария</li>
-                <li>Программирование (сайт-резюме создал сам)</li>
+                <li>Музыка</li>
             </ul>
         </div>
 
@@ -67,19 +65,19 @@
                         </thead> -->
                 <tbody>
                     <tr>
-                        <td>Ресторан Meet Meat</td>
-                        <td>Помощник повара/Повар гриля/Повар горячего цеха/Повар холодного цеха</td>
+                        <td>Farpost</td>
+                        <td>Системный-администратор/Маладший разработчик/Модератор сайта/Менеджер по работе с юр. лицами</td>
                         <td>2016-2019</td>
                     </tr>
                     <tr>
-                        <td>Ресторан Aldente</td>
-                        <td>Су-шеф</td>
-                        <td>2019-2021</td>
+                        <td>Студия дизана "Две головы"</td>
+                        <td>Дизайнер-консультант</td>
+                        <td>2019-2022</td>
                     </tr>
                     <tr>
-                        <td>Ресторан Zuma</td>
-                        <td>Су-шеф</td>
-                        <td>2021-2022</td>
+                        <td>ООО "Кроун" / World Car</td>
+                        <td>Менеджер по продажам автомобилей</td>
+                        <td>2022-2022</td>
                     </tr>
                 </tbody>
             </table>
