--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <div class="info-text">
                 <h1>Кирилл Левчук</h1>
-                <p>Привет, меня зовут Кирилл, я кандидат я кандидат на должность <strong>менеджера по проажам</strong>. Я обладаю хорошим чувством юмора и отсутвием страха перед клиентом, даже в те моменты, когда я не знаю ответ на его вопрос. Я не опытный продажник, но мне очень нужно много денег, думаю посыл понятен.)
+                <p>Привет, меня зовут Кирилл, я кандидат на должность <strong>менеджера по проажам</strong>. Я обладаю хорошим чувством юмора и отсутвием страха перед клиентом, даже в те моменты, когда я не знаю ответ на его вопрос. Я не опытный продажник, но мне очень нужно много денег, думаю посыл понятен.)
                 <p>А еще я очень люблю автомобили!</p>
 
                 <h2>Социальные сети</h2>
