--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <td>2016-2019</td>
                     </tr>
                     <tr>
-                        <td>Студия дизана "Две головы"</td>
+                        <td>Студия дизайна "Две головы"</td>
                         <td>Дизайнер-консультант</td>
                         <td>2019-2022</td>
                     </tr>
