--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 
             <div class="info-text">
                 <h1>Кирилл Левчук</h1>
-                <p>Привет, меня зовут Кирилл, я кандидат на должность <strong>менеджера по проажам</strong>. Я обладаю хорошим чувством юмора и отсутвием страха перед клиентом, даже в те моменты, когда я не знаю ответ на его вопрос. Я не опытный продажник, но мне очень нужно много денег, думаю посыл понятен.)
+                <p>Привет, меня зовут Кирилл, я кандидат на должность <strong>ассистент преподавателя</strong>. Я обладаю хорошим чувством юмора, немного увлекаюсь программированием и обучаюсь дизайну интерфейсов. Есть опыт работы вожатым в детском лагере.</p> 
                 <p>А еще я очень люблю автомобили!</p>
+                <p>P.S. Этот сайт-резюме писал сам в качестве практики.</p>
 
                 <h2>Социальные сети</h2>
                 <a href="https://vk.com/anathematogod" target="_blank">Вконтакте</a> |
@@ -49,6 +50,8 @@
                 <li>Чтение книг</li>
                 <li>Кулинария</li>
                 <li>Музыка</li>
+                <li>Программирование</li>
+                <li>Дизайн</li>
             </ul>
         </div>
 
@@ -66,7 +69,7 @@
                 <tbody>
                     <tr>
                         <td>Farpost</td>
-                        <td>Системный-администратор/Маладший разработчик/Модератор сайта/Менеджер по работе с юр. лицами</td>
+                        <td>Модератор сайта/Менеджер по работе с юр. лицами</td>
                         <td>2016-2019</td>
                     </tr>
                     <tr>
