--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <div id="particles-js"></div>
     <div class="container">
         <div class="card info">
-            <img class="photo" src="044.jpg" alt="Кирилл Левчук">
+            <img class="photo" src="avatar.jpg" alt="Кирилл Левчук">
 
             <div class="info-text">
                 <h1>Кирилл Левчук</h1>
-                <p>Привет, меня зовут Кирилл, я кандидат на должность <strong>ассистент преподавателя</strong>. Я обладаю хорошим чувством юмора, немного увлекаюсь программированием и обучаюсь дизайну интерфейсов. Есть опыт работы вожатым в детском лагере.</p> 
-                <p>А еще я очень люблю автомобили!</p>
-                <p>P.S. Этот сайт-резюме писал сам в качестве практики.</p>
+                <p>Привет, меня зовут Кирилл. Я обладаю хорошим чувством юмора, а еще я хочу много денег, именно поэтому я с горящими глазами пру в продажи, надеясь получить то, что мне нужно!</p> 
+                <p>А еще я завел блог на ютубе, где затрагиваю темы бизнеса, дисциплины и немного психологии.</p>
+                <p>P.S. Этот сайт-резюме писал сам, ну чтобы показать какой я молодец.</p>
 
                 <h2>Социальные сети</h2>
-                <a href="https://vk.com/anathematogod" target="_blank">Вконтакте</a> |
-                <a href="https://t.me/anathematogod" target="_blank">Telegram</a> |
+                <a href="https://www.youtube.com/channel/UC1G69eoMY1V0Q0GjmcXmUjw" target="_blank">YouTube</a> |
+                <a href="https://t.me/Levchukone" target="_blank">Telegram</a> |
                 Телефон для связи: +7 (999) 617-76-60
             </div>
 
@@ -45,13 +45,10 @@
         <div class="card bg-one">
             <h2>Мои хобби</h2>
             <ul class="list">
-                <li>Коуч-психология</li>
-                <li>Спорт</li>
                 <li>Чтение книг</li>
-                <li>Кулинария</li>
+                <li>Спорт</li>
                 <li>Музыка</li>
-                <li>Программирование</li>
-                <li>Дизайн</li>
+                <li>YoyTube</li>
             </ul>
         </div>
 
@@ -68,8 +65,8 @@
                         </thead> -->
                 <tbody>
                     <tr>
-                        <td>Farpost</td>
-                        <td>Модератор сайта/Менеджер по работе с юр. лицами</td>
+                        <td>Журнал "Клуб Директоров" / Farpost</td>
+                        <td>Менеджер по продажам / Менеджер по работе с клиентами</td>
                         <td>2016-2019</td>
                     </tr>
                     <tr>
