--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
 
             <div class="info-text">
                 <h1>Кирилл Левчук</h1>
-                <p>Привет, меня зовут Кирилл. Я обладаю хорошим чувством юмора, а еще я хочу много денег, именно поэтому я с горящими глазами пру в продажи, надеясь получить то, что мне нужно!</p> 
-                <p>А еще я завел блог на ютубе, где затрагиваю темы бизнеса, дисциплины и немного психологии.</p>
-                <p>P.S. Этот сайт-резюме писал сам, ну чтобы показать какой я молодец.</p>
+                <p>Привет, меня зовут Кирилл. Я обладаю хорошим чувством юмора, а еще я хочу много денег, именно поэтому я с горящими глазами пру в продажи, надеясь получить то, что мне нужно!</p>
 
                 <h2>Социальные сети</h2>
                 <a href="https://www.youtube.com/channel/UC1G69eoMY1V0Q0GjmcXmUjw" target="_blank">YouTube</a> |
@@ -46,9 +44,9 @@
             <h2>Мои хобби</h2>
             <ul class="list">
                 <li>Чтение книг</li>
-                <li>Спорт</li>
-                <li>Музыка</li>
-                <li>YoyTube</li>
+                <li>Занятие спортом</li>
+                <li>Написание музыки</li>
+                <li>Съёмка видео на YouTube</li>
             </ul>
         </div>
 
