--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
             <div class="info-text">
                 <h1>Кирилл Левчук</h1>
-                <p>Привет, меня зовут Кирилл. Я обладаю хорошим чувством юмора, а еще я хочу много денег, именно поэтому я с горящими глазами пру в продажи, надеясь получить то, что мне нужно!</p>
+                <p>Привет, меня зовут Кирилл, мне 26 лет. Я обладаю хорошим чувством юмора и легко вникаю в сложные темы. Надеюсь сработаемся!)</p>
+                <p>Кстати, этот сайт я написал сам. Не зная программирования я разобрался и сделал, а это уже о многом говорит.</p>
 
                 <h2>Социальные сети</h2>
                 <a href="https://www.youtube.com/channel/UC1G69eoMY1V0Q0GjmcXmUjw" target="_blank">YouTube</a> |
@@ -33,6 +34,8 @@
             <h2>Мои навыки и личные качества</h2>
             <ul class="list2">
                 <li>Владение ПК (продвинутый пользователь)</li>
+                <li>HTML | CSS (базовый уровень)</li>
+                <li>Photoshop | Figma | Видеоредакторы (средний уровень)</li>
                 <br>
                 <li>Высокий уровень коммуникабельности</li>
                 <li>Умею работать на результат</li>
